# ai604-video-object-pose

./: .gitignore  README.md  augment.py  backbone.ipynb  backbone.py  dataset.ipynb  objectron_dataset _detection.py  objectron_dataset.py  objectron_dataset_detection.py  path_util.py  pyproject.toml  requirements.txt  show_sequence.ipynb  train_util.py
aws/: .gitignore  Dockerfile  README.md  aws-cli-install.sh  aws-run.sh  aws-stop.sh  block-device-mapping.json
config/: 2021-05-09-cube-test.yaml  2021-05-12-cube-working-keypoint.yaml  2021-05-12-objectron-overfit-test.yaml
notebooks/: dataset.ipynb  debug_trans.ipynb  evaluate_pnp.ipynb  show_bbox_eval.ipynb  show_sequence.ipynb  show_sequence_v2.ipynb
scripts/: bb_regression.py  download_objectron_shards.py  eval_keypoint_regression.py  evaluate_model.py  inspect_dataset.py  keypoint_regression.py  plot_evaluation.py  test_cal_translations.py  test_collate.py  test_dsnt.py  test_epnp.py  test_geometric_augment.py  test_keypoint_decoder.py  test_keypoint_transforms.py  test_photometric_augment.py  train_mnist.py  visualize_model.py
src/top/data/: augment.py  bbox_reg_util.py  cached_dataset.py  colored_cube_dataset.py  load.py  objectron_dataset.py  objectron_dataset_detection.py  objectron_detection.py  objectron_sequence.py  schema.py  transforms.py
src/top/model/: anchor.py  backbone.py  bbox_3d.py  keypoint.py  layers.py  loss.py  loss_util.py  rotation.py  transformer.py  util.py
src/top/run/: anchor.py  app_util.py  box_generator.py  draw_bounding_box.py  draw_regressed_bbox.py  logger.py  loss_util.py  (+6 more)
tmp/: list_files.py
(+13 files in other folders)
